<resources>
    <string name="app_name">Mis Cuentas</string>
    <string name="bienvenido">Mis Cuentas</string>
    <string name="abonar">Abonar</string>
    <string name="agregar_cliente">Agregar cliente</string>
    <string name="clientes">Mis Clientes</string>
    <string name="revistas">Mis Revistas</string>
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="cedula">Cédula</string>
    <string name="phone">Teléfono</string>
    <string name="address">Dirección</string>
    <string name="ingresar">Ingresar</string>
    <string name="producto">Producto: </string>
    <string name="cantidad">Cantidad: </string>
    <string name="porcentajeUnidad">Porcentaje unidad: </string>
    <string name="porcentajeTotal">Porcentaje total: </string>
    <string name="unidadganancia">Ganancia unidad: </string>
    <string name="unidadprecio">Precio unidad: </string>
    <string name="gananciatotal">Ganancia total: </string>
    <string name="total">Total</string>
    <string name="registrar">Registrar</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_lista_cliente">ListaCliente</string>
    <string name="title_activity_descripcion_cuenta">DescripcionCuenta</string>


</resources>
