<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/found5"
    tools:context="co.com.luifer.cuentas.Registro"
    android:gravity="center">



    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        app:cardElevation="4dp"
        app:cardBackgroundColor="#602CC670">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_margin="1dp"
            android:fontFamily="@font/bevan"
            android:gravity="center"
            android:text="@string/registrar"
            android:textColor="@color/colorAccent"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="10dp">



            <EditText
                android:id="@+id/nameEditext"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:elevation="2dp"
                android:ems="10"
                android:gravity="left"
                android:hint="@string/nombre"
                android:inputType="textPersonName"
                android:text=""
                android:textColor="#000"
                android:textColorHint="#000" />

            <EditText
                android:id="@+id/editTextaddress"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="left"
                android:hint="@string/address"
                android:inputType="textPersonName"
                android:text=""
                android:textColor="#000"
                android:textColorHint="#000"/>


            <EditText
                android:id="@+id/phoneEditext"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="left"
                android:hint="@string/phone"
                android:inputType="textPersonName"
                android:text=""
                android:textColor="#000"
                android:textColorHint="#000" />

            <EditText
                android:id="@+id/userEditext"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="left"
                android:hint="@string/cedula"
                android:inputType="textPersonName"
                android:text=""
                android:textColor="#000"
                android:textColorHint="#000" />

            <EditText
                android:id="@+id/contrasenaEditext"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="left"
                android:hint="@string/contraseña"
                android:inputType="textPersonName"
                android:text=""
                android:textColor="#000"
                android:textColorHint="#000"/>

            <Spinner
                android:id="@+id/spinerSeleccion"
                android:layout_width="200dp"
                android:layout_height="44dp"
                android:layout_margin="1dp"
                android:textColor="#000"
                android:backgroundTint="#000"/>

            <Button
                android:id="@+id/registrar_usuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/redondo"
                android:elevation="2dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/bevan"
                android:gravity="center"
                android:text="@string/registrar"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />

        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>
