<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/found5"
    tools:context="co.com.luifer.cuentas.MainActivity">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        app:cardElevation="4dp"
        app:cardBackgroundColor="#602CC670">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/bevan"
            android:gravity="center"
            android:text="@string/bienvenido"
            android:textColor="@color/colorAccent"
            android:textSize="30sp">
        </TextView>

        <LinearLayout
            android:layout_width="335dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:orientation="vertical">


            <Button
                android:id="@+id/MainbotonIngresar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/redondo"
                android:fontFamily="@font/arbutus"
                android:gravity="center"
                android:text="@string/ingresar"
                android:textColor="#000"
                android:textSize="18sp" />

            <Button
                android:id="@+id/botonregistro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:background="@drawable/redondo"
                android:fontFamily="@font/arbutus"
                android:gravity="center"
                android:text="@string/registrar"
                android:textColor="#000"
                android:textSize="18sp" />

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="180dp"
            android:layout_marginTop="60dp"
            android:orientation="horizontal"
            android:background="@drawable/todo">
        </LinearLayout>




        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
