<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        app:cardBackgroundColor="#602CC670"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:orientation="vertical">


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp">


                <ImageView
                    android:id="@+id/fotoProducto"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="3dp"
                    android:layout_gravity="center"
                    app:srcCompat="@mipmap/ic_launcher" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="2dp">


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/nombreProducto"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/producto"
                            android:layout_margin="3dp"
                            android:textColor="#000"
                            />

                        <TextView
                            android:id="@+id/LlenarnombreProducto"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint=" "
                            android:text=""
                            android:layout_margin="3dp"
                            android:textColor="#000"/>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/cant"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/cantidad"
                            android:layout_margin="3dp"
                            android:textColor="#000"/>

                        <TextView
                            android:id="@+id/Llenarcantidad"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint=" "
                            android:text=""
                            android:layout_margin="3dp"
                            android:textColor="#000"/>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/precio"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/unidadprecio"
                            android:layout_margin="3dp"
                            android:textColor="#000"/>

                        <TextView
                            android:id="@+id/llenarprecio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint=" "
                            android:text=""
                            android:layout_margin="3dp"
                            android:textColor="#000"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/porcentaje"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="3dp"
                            android:gravity="center"
                            android:textColor="#000"
                            android:text="@string/porcentajeUnidad" />

                        <TextView
                            android:id="@+id/llenarporcentajeUnidad"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint=" "
                            android:text=""
                            android:layout_margin="3dp"
                            android:textColor="#000"/>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/porcentajeTo"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/porcentajeTotal"
                            android:layout_margin="3dp"
                            android:textColor="#000"/>

                        <TextView
                            android:id="@+id/llenarporcentajeTotal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint=" "
                            android:text=""
                            android:layout_margin="3dp"
                            android:textColor="#000"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/precioTotal"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/total"
                            android:layout_margin="3dp"
                            android:textColor="#000"/>

                        <TextView
                            android:id="@+id/llenarprecioTotal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint=" "
                            android:text=""
                            android:layout_margin="3dp"
                            android:textColor="#000"/>

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>